--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/group?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/group-test?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=P@ssw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
