--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/group-test?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=P@ssw0rd
+spring.datasource.password=1000yuna
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
