--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=P@ssw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
