--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/group_db?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=P@ssw0rd
+spring.datasource.password=P@sw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
