--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/group_test?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1000yuna
+spring.datasource.password=P@ssw0rd
 
 
 
