--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/group_db?serverTimezone=UTC
 spring.datasource.username=root
 
-spring.datasource.password=1000yuna
+spring.datasource.password=P@ssw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 
 spring.jpa.show-sql=true
